@@ -1,7 +1,8 @@
 package com.companyA.backend.InventoryManagementSystem.service;
 
-import com.companyA.backend.InventoryManagementSystem.model.Repair;
+import com.companyA.backend.InventoryManagementSystem.model.*;
 import com.companyA.backend.InventoryManagementSystem.repository.RepairRepository;
+import com.companyA.backend.InventoryManagementSystem.repository.SendForRepairRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -14,48 +15,86 @@ public class RepairService {
     @Autowired
     private RepairRepository repairRepository;
 
-    /*public List<Repair> repairDetails() {
-        return repairRepository.findAll();
-    }*/
 
-    //add method in controller and service to check for damaged stock
-    //that means search in inventory for stock with StateOfProduct "DAMAGED"
-    //then return the list of stock with StateOfProduct "DAMAGED"
-    // so that the user can select which stock to send for repair
+    ////////////////////////////////
+    @Autowired
+    private SendForRepairRepository sendForRepairRepository;
 
-    public List<Repair> repairDetails(List<String> ids) {
-        List<Repair> repairs = repairRepository.findAllById(ids);
+    @Autowired
+    private SendForRepairService sendForRepairService;
+
+    @Autowired
+    private InventoryService inventoryService;
+
+    public List<String> getIdsOfDamagedProducts() {
+        return inventoryService.getIdsOfDamagedProducts();
+    }
+
+
+    ///////////////////////////////
+    //////////////////////////////
+
+    public void sendItemsForRepair(List<String> itemIds) {
+        // Update stateOfProduct to "UNDER_REPAIR" for items in inventory
+        //Done
+        List<Repair> itemsToRepair = repairRepository.findAllById(itemIds);
+        for (Repair item : itemsToRepair) {
+            item.setStateOfProduct(StateOfProduct.UNDER_REPAIR);
+        }
+        repairRepository.saveAll(itemsToRepair);
+
+        // Save selected data from itemsToRepair to repair collection
+        sendForRepairService.saveSelectedItemsToRepairCollection(itemsToRepair);
+
+    }
+    //////////////////////////////////////
+
+    ////////////////////////////////////////
+
+    ////////////////////////////////////////
+    public List<SendForRepair> repairDetails(List<String> ids) {
+        List<SendForRepair> repairs = sendForRepairRepository.findAllById(ids);
 
         // Check if all IDs were found
-        List<String> foundIds = repairs.stream().map(Repair::getId).toList();
-        List<String> missingIds = ids.stream().filter(id -> !foundIds.contains(id)).toList();
+        List<String> foundIds = repairs.stream().map(SendForRepair::getId).collect(Collectors.toList());
+        List<String> missingIds = ids.stream().filter(id -> !foundIds.contains(id)).collect(Collectors.toList());
 
         // If any IDs are missing, throw an IllegalArgumentException with the error message
         if (!missingIds.isEmpty()) {
-            throw new IllegalArgumentException("wrong product id");
+            throw new IllegalArgumentException();
         }
 
         return repairs;
     }
 
-    public String sendForRepairs(Repair repair) {
-        repairRepository.save(repair); // Save supplier to database
-        //set stock StateOfProduct to "UNDER_REPAIR"
+    public String sendForRepairs(SendForRepair sendForRepair) {
+        sendForRepairRepository.save(sendForRepair); // Save supplier to database
         return "Successfully Registered";
     }
 
-    //add method in controller and service for after repair is done set stock StateOfProduct to "REPAIRED"
-    //check what other info you can give when repair is done
-
     public void deleteRepairById(String id) {
         // Check if the repair exists
-        if (repairRepository.existsById(id)) {
+        if (sendForRepairRepository.existsById(id)) {
             // If the repair exists, delete it
-            repairRepository.deleteById(id);
+            sendForRepairRepository.deleteById(id);
         } else {
             // If the repair does not exist, throw an exception
             throw new IllegalArgumentException("Repair with ID " + id + " does not exist.");
         }
     }
+
+    ////////////////////////////////////////////////////////////////////////
+    ////////////////////////////////////////////////////////////////////////
+    public void updateRepairedItems(List<String> itemIds) {
+        // Update stateOfProduct to "REPAIRED" for items in inventory
+        List<Repair> itemsToRemove = repairRepository.findAllById(itemIds);
+        for (Repair item : itemsToRemove) {
+            item.setStateOfProduct(StateOfProduct.REPAIRED);
+        }
+        repairRepository.saveAll(itemsToRemove);
+
+        //sendForRepairService.removeSelectedItemsFromRepairCollection(itemIds);
+    }
 }
+
 
